# Knot-Theory

./: Knots.cabal
src/: Indices.hs  KnotDiagram.hs  KnotMorphism.hs  LinkDiagram.hs  RolfsonTable.hs
src/Encodings/: PlanarDiagram.hs
src/LinkDiagram/: Component.hs  Crossing.hs  Edge.hs  Internal.hs  Region.hs  Unknot.hs
src/Morphisms/: Category.hs  Knot.hs  Link.hs
src/Test/LinkDiagram/: TestingInterface.hs
tests/: KnotDiagramTest.hs  KnotMorphismTest.hs  KnotTests.hs  TestingInterface.hs
tests/Test/: KnotDiagramTest.hs  KnotMorphismTest.hs  Main.hs  TestAll.hs  TestingInterface.hs
tests/Test/LinkDiagram/: ComponentTest.hs  CrossingTest.hs  EdgeTest.hs  InternalTest.hs  RegionTest.hs  TestingInterface.hs  UnknotTest.hs
