name:           Knots
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         robert

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   containers,
                   smallcheck
  ghc-options:     -Wall
  other-modules:   
                   KnotMorphism
  exposed-modules: 
                   KnotDiagram,
                   RolfsonTable

test-suite knots
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4,
                   tasty > 0.10,
                   tasty-hunit,
                   HUnit,
                   tasty-quickcheck,
                   QuickCheck,
                   tasty-smallcheck,
                   smallcheck
  other-modules:   
                  KnotDiagram,
                  KnotDiagramTest,
                  KnotMorphism
  hs-source-dirs:  
                  tests,
                  src
  main-is:         KnotTests.hs

