name:           Knots
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         robert

library
  hs-source-dirs:   src
  build-depends:    
                   base >= 4,
                   containers,
                   smallcheck,
                   bifunctors
  ghc-options:      -Wall
  other-modules:    
  exposed-modules:  
                   KnotDiagram,
                   KnotMorphism,
                   LinkDiagram,
                   LinkDiagram.Component,
                   LinkDiagram.Crossing,
                   LinkDiagram.Edge,
                   LinkDiagram.Internal,
                   LinkDiagram.Region,
                   LinkDiagram.Unknot,
                   RolfsonTable

test-suite TestAll
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   
                  base >= 4,
                  tasty > 0.10,
                  tasty-hunit,
                  HUnit,
                  tasty-quickcheck,
                  containers,
                  QuickCheck,
                  Knots,
                  smallcheck,
                  tasty-smallcheck
  other-modules:   
  hs-source-dirs:  tests
  main-is:         Test/TestAll.hs

